Fix proxy issue

--- a/nbconvert_notebook.ipynb
+++ b/nbconvert_notebook.ipynb
@@ -37,6 +37,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\HOMEWARE\\anaconda-3-x86_64\\lib\\site-packages\\requests\\packages\\urllib3\\connectionpool.py:852: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
+      "  InsecureRequestWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'/*!\\n*\\n* Twitter Bootstrap\\n*\\n*/\\n/*!\\n * Bootstrap v3.3.7 (http://getbootstrap.com)\\n * Copyright 2011-2'"
@@ -48,20 +56,28 @@
     }
    ],
    "source": [
-    "def load_remote_file(url, login='login', password='',\n",
-    "                     proxies=False, proxy_host='', proxy_port=''):\n",
+    "def load_remote_file(url, login=None, password=None,\n",
+    "                     proxy_host=None, proxy_port=None,\n",
+    "                     verbose=False):\n",
     "\n",
-    "    pwd = urllib.parse.quote(password)\n",
+    "    is_proxy = not((login is None) and (password is None) and\n",
+    "                   (proxy_host is None) and (proxy_port is None))\n",
+    "    \n",
     "\n",
-    "    if proxies:\n",
+    "\n",
+    "    if is_proxy:\n",
+    "        pwd = urllib.parse.quote(password)\n",
     "        dic = {'login': login, 'pwd': pwd,\n",
     "               'proxy_host': proxy_host, 'proxy_port': proxy_port}\n",
     "        proxies = {\n",
     "            'http': 'http://{login}:{pwd}@{proxy_host}:{proxy_port}'.format(**dic),\n",
     "            'https': 'https://{login}:{pwd}@{proxy_host}:{proxy_port}'.format(**dic)\n",
     "        }\n",
+    "        if verbose:\n",
+    "            print('pwd:', pwd)\n",
+    "            print('proxies:', proxies)\n",
     "\n",
-    "    res = rq.get(url, proxies=proxies)\n",
+    "    res = rq.get(url, proxies=proxies, verify=False)\n",
     "    assert res.status_code == 200, 'Download error'\n",
     "    return res.content.decode('utf-8')\n",
     "\n",
@@ -74,8 +90,11 @@
     "\n",
     "version = '5.1.0'\n",
     "url = 'https://cdn.jupyter.org/notebook/{}/style/style.min.css'.format(version)\n",
-    "notebook_css = load_remote_file(url)\n",
-    "\n",
+    "notebook_css = load_remote_file(url,\n",
+    "                                login='my-login',\n",
+    "                                password='my-password',\n",
+    "                                proxy_host='my-proxy.com',\n",
+    "                                proxy_port='8080')\n",
     "notebook_css[:100]"
    ]
   },
@@ -250,11 +269,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook sample_notebook.ipynb to html\n",
-      "[NbConvertApp] Writing 577090 bytes to sample_notebook.html\n"
+      "[NbConvertApp] Writing 577342 bytes to sample_notebook.html\n"
      ]
     }
    ],
@@ -288,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
