Add execute sample and more css to convert

--- a/nbconvert_notebook.ipynb
+++ b/nbconvert_notebook.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -103,6 +103,82 @@
     ".prompt {\n",
     "    min-width: 5%; //14px\n",
     "}\n",
+    "\"\"\"\n",
+    "\n",
+    "ribbon_css = \"\"\"\n",
+    "\n",
+    "/* The ribbons */\n",
+    "\n",
+    ".corner-ribbon{\n",
+    "  width: 200px;\n",
+    "  background: #e43;\n",
+    "  position: relative;\n",
+    "  top: 25px;\n",
+    "  left: -50px;\n",
+    "  text-align: center;\n",
+    "  line-height: 50px;\n",
+    "  letter-spacing: 1px;\n",
+    "  color: #f0f0f0;\n",
+    "  transform: rotate(-45deg);\n",
+    "  -webkit-transform: rotate(-45deg);\n",
+    "}\n",
+    "\n",
+    "/* Custom styles */\n",
+    "\n",
+    ".corner-ribbon.sticky{\n",
+    "  position: fixed;\n",
+    "}\n",
+    "\n",
+    ".corner-ribbon.shadow{\n",
+    "  box-shadow: 0 0 3px rgba(0,0,0,.3);\n",
+    "}\n",
+    "\n",
+    "/* Different positions */\n",
+    "\n",
+    ".corner-ribbon.top-left{\n",
+    "  top: 25px;\n",
+    "  left: -50px;\n",
+    "  transform: rotate(-45deg);\n",
+    "  -webkit-transform: rotate(-45deg);\n",
+    "}\n",
+    "\n",
+    ".corner-ribbon.top-right{\n",
+    "  top: 25px;\n",
+    "  right: -50px;\n",
+    "  left: auto;\n",
+    "  transform: rotate(45deg);\n",
+    "  -webkit-transform: rotate(45deg);\n",
+    "}\n",
+    "\n",
+    ".corner-ribbon.bottom-left{\n",
+    "  top: auto;\n",
+    "  bottom: 25px;\n",
+    "  left: -50px;\n",
+    "  transform: rotate(45deg);\n",
+    "  -webkit-transform: rotate(45deg);\n",
+    "}\n",
+    "\n",
+    ".corner-ribbon.bottom-right{\n",
+    "  top: auto;\n",
+    "  right: -50px;\n",
+    "  bottom: 25px;\n",
+    "  left: auto;\n",
+    "  transform: rotate(-45deg);\n",
+    "  -webkit-transform: rotate(-45deg);\n",
+    "}\n",
+    "\n",
+    "/* Colors */\n",
+    "\n",
+    ".corner-ribbon.white{background: #f0f0f0; color: #555;}\n",
+    ".corner-ribbon.black{background: #333;}\n",
+    ".corner-ribbon.grey{background: #999;}\n",
+    ".corner-ribbon.blue{background: #39d;}\n",
+    ".corner-ribbon.green{background: #2c7;}\n",
+    ".corner-ribbon.turquoise{background: #1b9;}\n",
+    ".corner-ribbon.purple{background: #95b;}\n",
+    ".corner-ribbon.red{background: #e43;}\n",
+    ".corner-ribbon.orange{background: #e82;}\n",
+    ".corner-ribbon.yellow{background: #ec0;}\n",
     "\"\"\""
    ]
   },
@@ -118,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +239,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# template = \"\"\"\n",
+    "# {% extends 'full.tpl'%}\n",
+    "\n",
+    "\n",
+    "\n",
+    "# {% block any_cell %}\n",
+    "# {% if cell.get('source', '').startswith('# NBCONVERT IMPORTANT') %}\n",
+    "#     <div style=\"border:thin solid red\">\n",
+    "#         {{ super() }}\n",
+    "#     </div>\n",
+    "# {% elif cell.get('source', '').startswith('# NBCONVERT REMOVE') %}\n",
+    "#     <div>\n",
+    "#     </div>\n",
+    "# {% else %}\n",
+    "#     {{ super() }}\n",
+    "# {% endif %}\n",
+    "# {% endblock any_cell %}\n",
+    "# \"\"\"\n",
+    "\n",
+    "# # dic = {'__notebook_css__': notebook_css}\n",
+    "\n",
+    "# template = multiple_replace(dic, template)\n",
+    "\n",
+    "# path = 'template_selective.tpl'\n",
+    "# write_file(template, path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -194,15 +303,37 @@
     "<style>\n",
     "__notebook_css__\n",
     "__prompt_css__\n",
+    "__ribbon_css__\n",
     "</style>\n",
     "{% endblock header %}\n",
     "\n",
+    "{% block body %}\n",
+    "    <div class=\"corner-ribbon top-right sticky blue\">IMPORTANT</div>\n",
+    "    {{ super() }}\n",
+    "{% endblock body %}\n",
+    "\n",
+    "\n",
     "{% block input_group %}\n",
     "{% endblock input_group %}\n",
+    "\n",
+    "{% block any_cell %}\n",
+    "{% if cell.get('source', '').startswith('# NBCONVERT IMPORTANT') %}\n",
+    "    <div style=\"border:3px solid orange; background-color: #f7f7f7\">\n",
+    "        {{ super() }}\n",
+    "    </div>\n",
+    "{% elif cell.get('source', '').startswith('# NBCONVERT REMOVE') %}\n",
+    "    <div>\n",
+    "    </div>\n",
+    "{% else %}\n",
+    "    {{ super() }}\n",
+    "{% endif %}\n",
+    "{% endblock any_cell %}\n",
     "\"\"\"\n",
     "\n",
     "dic = {'__notebook_css__': notebook_css,\n",
-    "       '__prompt_css__': prompt_css}\n",
+    "       '__prompt_css__': prompt_css,\n",
+    "       '__ribbon_css__': ribbon_css\n",
+    "      }\n",
     "\n",
     "template = multiple_replace(dic, template)\n",
     "\n",
@@ -220,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {
     "scrolled": false
    },
@@ -254,13 +385,41 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook sample_notebook.ipynb to html\n",
-      "[NbConvertApp] Writing 577090 bytes to sample_notebook.html\n"
+      "[NbConvertApp] Writing 541441 bytes to sample_notebook.html\n"
      ]
     }
    ],
    "source": [
     "!jupyter nbconvert --to html $nb_filename --template=$template"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# packages in environment at /usr/local/anaconda3:\n",
+      "#\n",
+      "nbconvert                 5.3.1            py36h810822e_0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda list nbconvert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -288,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
