--- a/sample_notebook.ipynb
+++ b/sample_notebook.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is some markdown **text** with some equations both in line ($3^2=9$) and in block:\n",
+    "This is some markdown **text** including <span style=\"color: red;\">colored text</span> with some equations both in line ($3^2=9$) and in block:\n",
     "$$e^{i\\pi}=-1$$\n"
    ]
   },
@@ -196,6 +196,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Execution timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-11-12 21:46:40.331003\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import datetime as dt\n",
+    "\n",
+    "now = dt.datetime.now()\n",
+    "print(now)\n",
+    "\n",
+    "with open(os.path.join('output', 'log.txt'), 'a') as f:\n",
+    "    f.write(str(now)+'\\n')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -221,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
